--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-ga": "^3.1.2",
     "react-icons": "^3.11.0",
     "react-masonry-component": "^6.2.1",
+    "react-responsive-carousel": "^3.2.11",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.11",
