--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-ga": "^3.1.2",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^3.11.0",
     "react-masonry-component": "^6.2.1",
     "react-responsive-carousel": "^3.2.11",
